--- a/Ecommerce/home/templates/home/base.html
+++ b/Ecommerce/home/templates/home/base.html
@@ -39,7 +39,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item {%block nav_home%}{%endblock%}">
-            <a class="nav-link " href="#">Home
+            <a class="nav-link " href="{% url 'home:homepage' %}">Home
               <!-- <span class="sr-only">(current)</span> -->
             </a>
           </li>
@@ -48,7 +48,12 @@
           </li>
           <li class="nav-item {%block nav_account%}{%endblock%}">
             <a class="nav-link" href="#">
-              Account <i class="fas fa-user"></i>
+              {% if user.is_authenticated %}
+              {{user.first_name}}
+              {% else %}
+              Sign In
+              {% endif %}
+               <i class="fas fa-user"></i>
             </a>
           </li>
           <li class="nav-item {%block nav_cart%}{%endblock%}">
