Started accounts app

--- a/Ecommerce/home/templates/home/homepage.html
+++ b/Ecommerce/home/templates/home/homepage.html
@@ -4,6 +4,10 @@
 active
 {%endblock%}
 
+{%block title_name%}
+Homepage
+{% endblock%}
+
 {%block content%}
 <div class="container">
           <h2 class="my-4">Offers</h2>
