Updated login view

--- a/Ecommerce/accounts/templates/registration/login.html
+++ b/Ecommerce/accounts/templates/registration/login.html
@@ -19,7 +19,7 @@
 			{{form|crispy}}
 			<button class="btn btn-primary" type="submit">Log In</button>
 		</form>
-		<p class="text-secondary my-3">Don't Have an Account? Sign Up</p>
+		<p class="text-secondary my-3">Don't Have an Account? <a href="{% url 'signup' %}">Sign Up</a></p>
 	</div>
 </div>
 <div class="col-3"></div>
