--- a/Ecommerce/accounts/templates/registration/signup.html
+++ b/Ecommerce/accounts/templates/registration/signup.html
@@ -15,6 +15,7 @@
 		<div class="container text-center my-5">
 			{% csrf_token %}
 				 {% crispy form %}
+			<p class="text-secondary my-3">Already Have an Account? <a href="{% url 'login' %}">Log In</a></p>
 
 		</div>
 
