User profile edit view

--- a/Ecommerce/home/templates/home/homepage.html
+++ b/Ecommerce/home/templates/home/homepage.html
@@ -12,6 +12,7 @@ Homepage
 {% include "home/sidebar.html"%}
 
 <div class="col-lg-9">
+  <a href="{%url 'logout'%}" class="btn bg-warning">Logout</a>
   <div class="container">
           <h2 class="my-4">Offers</h2>
         </div>
