--- a/Ecommerce/home/templates/home/base.html
+++ b/Ecommerce/home/templates/home/base.html
@@ -70,7 +70,7 @@
   </nav>
 
   <!-- Page Content -->
-  <div class="container">
+  <div class="container my-4">
     <div class="row">
       {%block content%}
       {%endblock%}
