--- a/Ecommerce/home/templates/home/base.html
+++ b/Ecommerce/home/templates/home/base.html
@@ -48,7 +48,7 @@
           </li>
           <li class="nav-item {%block nav_account%}{%endblock%}">
               {% if user.is_authenticated %}
-               <a class="nav-link" href="#"> {{user.first_name}}
+               <a class="nav-link" href="{% url 'profile' %}"> {{user.first_name}}
               {% else %}
               <a class="nav-link" href="{% url 'login' %}"> Sign In
               {% endif %}
