--- a/Ecommerce/home/templates/home/homepage.html
+++ b/Ecommerce/home/templates/home/homepage.html
@@ -9,10 +9,9 @@ Homepage
 {% endblock%}
 
 {%block content%}
-{% include "home/sidebar.html"%}
+{% include "home/sidebar.html" with list=categories%}
 
 <div class="col-lg-9">
-
   <div class="container">
           <h2 class="my-4">Offers</h2>
         </div>
@@ -47,22 +46,31 @@ Homepage
           <div class="container">
             <h2 class="mb-4">Top Products</h2>
           </div>
+          {% for product in products %}
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="{{product.image.url}}" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item One</a>
+                  <a href="#">{{product.name}}</a>
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <span class="badge badge-primary">{{product.category.name}}</span>
+                <h5>{{product.price|floatformat:2}}</h5>
+
+                <!-- <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p> -->
               </div>
               <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                <!-- <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small> -->
+                <button class="btn btn-primary p-1">
+                  <i class="fa fa-cart-plus" aria-hidden="true"></i>
+                  Add to Cart
+                </button>
               </div>
             </div>
           </div>
+          {% endfor %}
 
+<!-- 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
               <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
@@ -141,9 +149,10 @@ Homepage
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
+
 </div>
 
 {%endblock%}
