--- a/Ecommerce/home/templates/home/sidebar.html
+++ b/Ecommerce/home/templates/home/sidebar.html
@@ -2,8 +2,9 @@
       <div class="col-lg-3">
         <h1 class="my-4">Shop Name</h1>
         <div class="list-group list-group-flush">
-          <a href="#" class="list-group-item list-group-item-action list-group-item-info">Category 1</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-info">Category 2</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-info">Category 3</a>
+        	{% for category in list %}
+          <a href="#" class="list-group-item list-group-item-action list-group-item-info">{{category.name}}</a>
+          {%endfor%}
+          
         </div>
       </div>
