Updating static files dirs

--- a/Ecommerce/home/templates/home/homepage.html
+++ b/Ecommerce/home/templates/home/homepage.html
@@ -49,7 +49,7 @@ Homepage
           {% for product in products %}
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="{{product.image.url}}" alt=""></a>
+              <img class="card-img-top" src="{{product.image.url}}">
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">{{product.name}}</a>
