--- a/Ecommerce/home/templates/home/base.html
+++ b/Ecommerce/home/templates/home/base.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
+  {% load static %}
+
 <head>
   <style media="screen">
   body {
     padding-top: 56px;
   }
+
   </style>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,6 +16,10 @@
   <meta name="author" content="">
 
   <title>{%block title_name%}{%endblock%}</title>
+
+
+
+  <link rel="stylesheet" type="text/css" href="{% static 'css/card_image.css'%}">
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
