Category wise List View

--- a/Ecommerce/home/templates/home/product.html
+++ b/Ecommerce/home/templates/home/product.html
@@ -19,7 +19,7 @@
 
 			<span class="small p-1 border border-info rounded-lg">{{product.category}}</span>
 			<h5 class="mt-3">Product Description</h5>
-			<p>{{product.description}}</p>
+			<p>{{product.description|linebreaks}}</p>
 		</div>
 
 
