:sparkles: Created cart item list page

--- a/Ecommerce/home/templates/home/base.html
+++ b/Ecommerce/home/templates/home/base.html
@@ -63,7 +63,7 @@
             </a>
           </li>
           <li class="nav-item {%block nav_cart%}{%endblock%}">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url 'cartlist' %}">
               Cart <i class="fas fa-shopping-cart"></i>
             </a>
           </li>
