:construction: Badge with cart item count

--- a/Ecommerce/home/templates/home/base.html
+++ b/Ecommerce/home/templates/home/base.html
@@ -65,6 +65,7 @@
           <li class="nav-item {%block nav_cart%}{%endblock%}">
             <a class="nav-link" href="{% url 'cartlist' %}">
               Cart <i class="fas fa-shopping-cart"></i>
+              <span class="badge badge-light">{{cartcount}}</span>
             </a>
           </li>
         </ul>
