--- a/Ecommerce/home/templates/home/sidebar.html
+++ b/Ecommerce/home/templates/home/sidebar.html
@@ -1,6 +1,7 @@
 <!-- Side Bar Column -->
-      <div class="col-lg-3">
-        <h1 class="my-4">Shop Name</h1>
+{%load static %}
+      <div class="col-lg-3 text-center">
+        <h1 class="my-4"><img src="{% static 'sidebarlogo.png' %}"></h1>
         <div class="list-group list-group-flush">
         	{% for category in list %}
           <a href="{% url 'home:category_list' slug=category.slug%}" class="list-group-item list-group-item-action list-group-item-info">{{category.name}}</a>
