--- a/Ecommerce/home/templates/home/base.html
+++ b/Ecommerce/home/templates/home/base.html
@@ -19,7 +19,7 @@
 
 
 
-  <link rel="stylesheet" type="text/css" href="{% static 'css/card_image.css'%}">
+  <link rel="stylesheet" type="text/css" href="{% static 'card_image.css'%}">
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -50,9 +50,9 @@
               <!-- <span class="sr-only">(current)</span> -->
             </a>
           </li>
-          <li class="nav-item {%block nav_shop%}{%endblock%}">
+<!--           <li class="nav-item {%block nav_shop%}{%endblock%}">
             <a class="nav-link" href="#">Shop</a>
-          </li>
+          </li> -->
           <li class="nav-item {%block nav_account%}{%endblock%}">
               {% if user.is_authenticated %}
                <a class="nav-link" href="{% url 'profile' %}"> {{user.first_name}}
@@ -69,8 +69,8 @@
             </a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0 ">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search Product">
+        <form method = "get" class="form-inline my-2 my-lg-0 " action="{% url 'home:search_products' %}">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search Product" name="product_query">
           <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
