--- a/Ecommerce/home/templates/home/homepage.html
+++ b/Ecommerce/home/templates/home/homepage.html
@@ -12,7 +12,7 @@ Homepage
 {% include "home/sidebar.html" with list=categories%}
 
 <div class="col-lg-9">
-  <div class="container">
+  <!-- <div class="container">
           <h2 class="my-4">Offers</h2>
         </div>
         <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
@@ -34,13 +34,13 @@ Homepage
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <!-- <span class="sr-only">Previous</span> -->
+
           </a>
           <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <!-- <span class="sr-only">Next</span> -->
+
           </a>
-        </div>
+        </div> -->
 
         <div class="row">
           <div class="container">
